--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -2,7 +2,7 @@
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
 
 <head th:fragment="head-default (pageTitle, metaRobots, metaDescription, metaKeywords)">
-    <meta charset="UTF-8"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title th:text="${pageTitle}">Head</title>
     <meta name="robots" th:content="${metaRobots}"/>
     <meta name="description" th:content="${metaDescription}"/>
@@ -31,7 +31,7 @@
 </head>
 
 <head th:fragment="head-registration (pageTitle, metaRobots, metaDescription, metaKeywords)">
-    <meta charset="UTF-8"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title th:text="${pageTitle}">Head</title>
     <meta name="robots" th:content="${metaRobots}"/>
     <meta name="description" th:content="${metaDescription}"/>
@@ -46,7 +46,7 @@
 </head>
 
 <head th:fragment="head-transaction-do (pageTitle, metaRobots, metaDescription, metaKeywords)">
-    <meta charset="UTF-8"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title th:text="${pageTitle}">Head</title>
     <meta name="robots" th:content="${metaRobots}"/>
     <meta name="description" th:content="${metaDescription}"/>
@@ -61,7 +61,7 @@
 </head>
 
 <head th:fragment="head-transaction-confirm (pageTitle, metaRobots, metaDescription, metaKeywords)">
-    <meta charset="UTF-8"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title th:text="${pageTitle}">Head</title>
     <meta name="robots" th:content="${metaRobots}"/>
     <meta name="description" th:content="${metaDescription}"/>
@@ -86,7 +86,7 @@
 </head>
 
 <head th:fragment="head-account_details (pageTitle, metaRobots, metaDescription, metaKeywords)">
-    <meta charset="UTF-8"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title th:text="${pageTitle}">Head</title>
     <meta name="robots" th:content="${metaRobots}"/>
     <meta name="description" th:content="${metaDescription}"/>
@@ -101,7 +101,7 @@
 </head>
 
 <head th:fragment="head-accounts (pageTitle, metaRobots, metaDescription, metaKeywords)">
-    <meta charset="UTF-8"/>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
     <title th:text="${pageTitle}">Head</title>
     <meta name="robots" th:content="${metaRobots}"/>
     <meta name="description" th:content="${metaDescription}"/>
